# nodez

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  package.json  tsconfig.json  tsconfig.library.json
tools/: BUILD.bazel  bazel_deps.bzl  defs.bzl  ts_proto_nest_compile.bzl
trumid/ats/addition/: BUILD.bazel  app.controller.ts  app.service.ts  main.ts
trumid/ats/addition/proto/: BUILD.bazel  addition_service.proto  package.json
trumid/ats/common/: BUILD.bazel  math.ts
trumid/math/: BUILD.bazel  package.json
trumid/ui/pb-client/: BUILD.bazel  package.json
