load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "copy_to_bin")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "lib",
    srcs = glob(["*.ts"]),
    source_map = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//trumid/math:pkg",
        "@npm//@nestjs/common",
        "@npm//@nestjs/microservices",
        "@npm//@nestjs/core",
    ],
)

copy_to_bin(
  name = "proto",
  srcs = ["addition_service.proto"]
)

nodejs_binary(
    name = "addition",
    data = [
        ":lib",
        ":proto",
        "//trumid/math:pkg"
    ],
    entry_point = ":main.ts",
    # Why can i not replace this with link_workspace_root ?
    args = ["--bazel_patch_module_resolver"], 
    # link_workspace_root = True,
)
