load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools:ts_proto_nest_compile.bzl", "ts_proto_nest_compile")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "proto",
  srcs = ["addition_service.proto"],
)

ts_proto_nest_compile(
  name = "generated", # used as the first directory before the package paths generated, pretty ugly but bearable
  protos = [
    ":proto"
  ]
)

copy_to_bin(
  name = "proto_bin",
  srcs = ["addition_service.proto"]
)
